// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavBar should match the snapshot 1`] = `
<div
  className="NavBar"
>
  <NavLink
    activeClassName="active"
    aria-current="page"
    exact={true}
    to="/"
  >
    Home
  </NavLink>
  <NavLink
    activeClassName="active"
    aria-current="page"
    exact={true}
    to="/favorites"
  >
    Favorites
  </NavLink>
  <button
    className="logout-btn"
    onClick={[Function]}
  >
    Logout
  </button>
</div>
`;

exports[`NavBar should match the snapshot with no current user 1`] = `
<div
  className="NavBar"
>
  <NavLink
    activeClassName="active"
    aria-current="page"
    exact={true}
    to="/"
  >
    Home
  </NavLink>
  <NavLink
    activeClassName="active"
    aria-current="page"
    exact={true}
    to="/login"
  >
    Favorites
  </NavLink>
  <div>
    <NavLink
      activeClassName="active"
      aria-current="page"
      exact={true}
      to="/login"
    >
      Login
    </NavLink>
    <NavLink
      activeClassName="active"
      aria-current="page"
      exact={true}
      to="/signUp"
    >
      Sign up
    </NavLink>
  </div>
</div>
`;
